--- a/wp-content/themes/duena/style.css
+++ b/wp-content/themes/duena/style.css
@@ -688,7 +688,7 @@ margin-bottom:0px;
 .page_wrap {
   padding: 20px;
   margin: 0 0 30px 0;
-  background: #ffffff;
+  background: #bbbbbb;
   box-shadow: 0 5px 7px rgba(0, 0, 0, 0.22);
   position: relative;
 }
@@ -3197,11 +3197,14 @@ margin-bottom: 0px
 } 
 .gcf_title1 ,.login-username,.login-password
 {
+font-family: helvetica;
 padding:2px;
 height: 25px;
-width: 215px;
-margin-left:2px;
+width: 205px;
+margin-left:10px;
+margin-bottom:5px;
 background: url(images/field.png) left top no-repeat;
+background-size: 95% 95%;
 }
 .popup_gradient input[type="text"],#Register input[type="text"],.LoginForm input[type="text"],.LoginForm input[type="password"] {
 padding:0;
@@ -3222,34 +3225,34 @@ border-radius: 0;
 line-height:0;
 display: block;
 width: 65px;
-height: 17px;
+height: 22px;
 padding: 5px 0 0 0;
 text-align: center;
 font-size: 12px;
 color: #c1c1c1;
 text-decoration: none;
-background: url(images/button.small.png) left top no-repeat;
+background: url(images/button.small.png) left bottom no-repeat;
 }
 .popup_gradient input[type="submit"]:focus{
+background: url(images/button.small.png) left bottom no-repeat;
 color:white;
-background:inherit;
 box-shadow: none;
 }
 .popup_gradient input[type="submit"]:hover{
-background:inherit;
+background: url(images/button.small.png) left bottom no-repeat;
 box-shadow: none;
 color:white;
 }
 .popup_gradient input[type="button"]:focus{
-background: url(images/button.small.png) left top no-repeat;
-background:inherit;
+background: url(images/button.small.png) left bottom no-repeat;
 box-shadow: none;
+color:white;
 
 }
 .popup_gradient input[type="button"]:hover{
-background: url(images/button.small.png) left top no-repeat;
-background:inherit;
+background: url(images/button.small.png) left bottom no-repeat;
 box-shadow: none;
+color:white;
 
 }
 .popup_gradient textarea{
