--- a/wp-content/themes/duena/style.css
+++ b/wp-content/themes/duena/style.css
@@ -3179,7 +3179,7 @@ background-position: center !important;
 #login_error,#register_error,#contact_error{
     color: red;
     font-weight: bold;
-    font-style: italic;
+    font-style: normal;
     font-size:12px;
 }
 .tl-sb-inner p{
@@ -3224,7 +3224,7 @@ text-align:center;
 border-radius: 0;
 line-height:0;
 display: block;
-width: 65px;
+width: 80px;
 height: 22px;
 padding: 5px 0 0 0;
 text-align: center;
